plugins {
  id 'net.neoforged.moddev' version '2.0.82' apply false
  id 'fabric-loom' version '1.10-SNAPSHOT' apply false
}

tasks.register('generateModManifests') {
  final def expandProps = [
          'version'                      : version,
          'group'                        : project.group,
          'minecraft_version'            : minecraft_version,
          'minecraft_version_range'      : minecraft_version_range,
          'mod_name'                     : mod_name,
          'mod_author'                   : mod_author,
          'mod_id'                       : mod_id,
          'license'                      : license,
          'description'                  : project.description,
          'credits'                      : credits,
          'issue_tracker'                : issue_tracker,
          'sources'                      : sources,
  ]

  inputs.properties expandProps

  final def templateFiles = fileTree('.').matching {
    include '**/*.template'
  }.files

  templateFiles.each { templateFile ->
    final def targetFile = new File(templateFile.parentFile, templateFile.name.substring(0, templateFile.name.length() - '.template'.length()))
    inputs.file templateFile
    outputs.file targetFile
    doLast {
      copy {
        from templateFile
        into targetFile.parentFile
        rename { targetFile.name }
        expand expandProps
      }
    }
  }
}

subprojects {
  apply plugin: 'java'

  group = maven_group
  version = "$version+$minecraft_version"

  java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
  }

  repositories {
    mavenCentral()
    maven {
      url = 'https://repo.spongepowered.org/repository/maven-public/'
      content { includeGroup 'org.spongepowered' }
    }
    maven {
      url = 'https://maven.parchmentmc.org/'
      content { includeGroup 'org.parchmentmc.data' }
    }
  }

  dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
  }

  jar {
    from("LICENSE") {
      rename { "${it}_${mod_id}" }
    }
  }

  tasks.withType(JavaCompile).configureEach {
    it.options.encoding = 'UTF-8'
    it.options.release = 21
  }

  tasks.withType(ProcessResources).configureEach {
    dependsOn generateModManifests
    exclude '**/*.template'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
  }

  tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
  }
}
